Use files to store jinja2 templates
Instead of defining the templates as a multi-line string, we instead
move the templates to files. The templating module reads these files
into the same variable names as before.

--- a/posit-bakery/posit_bakery/templating/templates/containerfile.jinja2
+++ b/posit-bakery/posit_bakery/templating/templates/containerfile.jinja2
@@ -1,5 +1,4 @@
-# Template for a Containerfile
-TPL_CONTAINERFILE = """FROM {{ base_tag }}
+FROM {{ base_tag }}
 
 ### ARG declarations ###
 # Declare your arguments here...
@@ -24,5 +23,3 @@ TPL_CONTAINERFILE = """FROM {{ base_tag }}
 
 ### Finalize image ###
 # Perform any final steps to prepare the image for use, such as setting the entrypoint, command, or exposing ports.
-
-"""
