--- a/posit-bakery/posit_bakery/templating/templates/manifest.toml.jinja2
+++ b/posit-bakery/posit_bakery/templating/templates/manifest.toml.jinja2
@@ -54,16 +54,15 @@ image_name = "{{ image_name }}"
 # include_app_vulns = true  # Defaults to true if not specified.
 # include_base_image_vulns = false  # Defaults to false if not specified.
 # [snyk.test.output]
-# json = false  # Defaults to false if not specified. Cannot be true if sarif is true.
+# format = "default"  # Can be "snyk", "json", or "default". Defaults to "default" if not specified.
 # json_file = false  # Defaults to false if not specified.
-# sarif = false  # Defaults to false if not specified. Cannot be true if json is true.
 # sarif_file = false  # Defaults to false if not specified.
 # [snyk.monitor]
 # include_app_vulns = true  # Defaults to true if not specified.
 # output_json = false  # Defaults to false if not specified.
-# environment = "distributed"  # Defaults to None if not specified. See Snyk documentation for values.
-# lifecycle = "production"  # Defaults to None if not specified. See Snyk documentation for values.
-# business_criticality = "medium"  # Defaults to None if not specified. See Snyk documentation for values.
+# environment = ["distributed"]  # Defaults to None if not specified. See Snyk documentation for values.
+# lifecycle = ["production"]  # Defaults to None if not specified. See Snyk documentation for values.
+# business_criticality = ["medium"]  # Defaults to None if not specified. See Snyk documentation for values.
 # [snyk.monitor.tags]
 {% raw %}
 # # Tags below will be automatically added unless overridden.
