Add more tests and start improving documentation of models

--- a/posit-bakery/test/resources/unified-config/barebones/scratch/template/Containerfile.scratch.jinja2
+++ b/posit-bakery/test/resources/unified-config/barebones/scratch/template/Containerfile.scratch.jinja2
@@ -1,4 +1,4 @@
 FROM scratch
 
 # Some data must be added or Snyk will call the image invalid
-COPY {{ rel_path }}/deps/packages.txt /tmp/packages.txt
+COPY {{ VersionPath }}/deps/packages.txt /tmp/packages.txt
