--- a/posit-bakery/test/resources/unified-config/basic/test-image/template/Containerfile.ubuntu2204.jinja2
+++ b/posit-bakery/test/resources/unified-config/basic/test-image/template/Containerfile.ubuntu2204.jinja2
@@ -5,17 +5,17 @@ ADD --chmod=750 https://saipittwood.blob.core.windows.net/packages/pti /usr/loca
 
 ### ARG declarations ###
 ARG DEBIAN_FRONTEND=noninteractive
-ARG IMAGE_VERSION="{{ image_version }}"
+ARG IMAGE_VERSION="{{ Image.Version }}"
 
 ### Install Apt Packages ###
-COPY {{ rel_path }}/deps/ubuntu2204_packages.txt /tmp/ubuntu2204_packages.txt
-{% if image_type != "min" -%}
-COPY {{ rel_path }}/deps/ubuntu2204_optional_packages.txt /tmp/ubuntu2204_optional_packages.txt
+COPY {{ VersionPath }}/deps/ubuntu2204_packages.txt /tmp/ubuntu2204_packages.txt
+{% if Image.Variant != "Minimal" -%}
+COPY {{ VersionPath }}/deps/ubuntu2204_optional_packages.txt /tmp/ubuntu2204_optional_packages.txt
 {%- endif %}
 RUN pti container syspkg upgrade --dist \
     && pti container syspkg install -f /tmp/ubuntu2204_packages.txt \
     && rm -f /tmp/ubuntu2204_packages.txt \
-    {%- if image_type != "min" %}
+    {%- if Image.Variant != "Minimal" %}
     && pti container syspkg install -f /tmp/ubuntu2204_optional_packages.txt \
     && rm -f /tmp/ubuntu2204_optional_packages.txt \
     {%- endif %}
