Fix new project bake plan outputs and target rendering

--- a/posit-bakery/posit_bakery/config/templating/templates/bakery.yaml.jinja2
+++ b/posit-bakery/posit_bakery/config/templating/templates/bakery.yaml.jinja2
@@ -8,7 +8,7 @@
 repository:
   url: "{{ repo_url }}"
   vendor: "Posit Software, PBC"
-  maintainer: "docker@posit.co"
+  maintainer: "Posit Docker Team <docker@posit.co>"
   authors: []
 
 # Define image registries used by builds in this repository. Images will be tagged appropriately for each registry.
