--- a/posit-bakery/test/resources/barebones/scratch/template/Containerfile.scratch.jinja2
+++ b/posit-bakery/test/resources/barebones/scratch/template/Containerfile.scratch.jinja2
@@ -1,3 +1,3 @@
 FROM scratch
 
-COPY {{ VersionPath }}/deps/packages.txt /tmp/packages.txt
+COPY {{ Path.Version }}/deps/packages.txt /tmp/packages.txt
