Only pass IMAGE_VARIANT to dgoss tests
Previously we had been passing IMAGE_TYPE and IMAGE_VARIANT with the
same values for backward compatability.

Now that we are completely over to the bakery.yaml, we are using the
"Variant" nomenclature.

--- a/posit-bakery/test/resources/basic/test-image/template/test/goss.yaml.jinja2
+++ b/posit-bakery/test/resources/basic/test-image/template/test/goss.yaml.jinja2
@@ -4,4 +4,4 @@ package:
   curl:
     installed: true
   cmake:
-    installed: {% raw %}{{ if eq .Env.IMAGE_TYPE "min" }}false{{ else }}true{{ end }}{% endraw %}
+    installed: {% raw %}{{ if eq .Env.IMAGE_VARIANT "Minimal" }}false{{ else }}true{{ end }}{% endraw %}
