--- a/posit-bakery/posit_bakery/config/templating/templates/macros/apt.j2
+++ b/posit-bakery/posit_bakery/config/templating/templates/macros/apt.j2
@@ -1,27 +1,27 @@
-{% macro update_upgrade() %}
+{% macro update_upgrade() -%}
 RUN apt-get update -yqq --fix-missing && \
     apt-get upgrade -yqq && \
     apt-get dist-upgrade -yqq && \
     apt-get autoremove -yqq --purge && \
     apt-get clean -yqq && \
     rm -rf /var/lib/apt/lists/*
-{% endmacro %}
+{%- endmacro %}
 
-{% macro install_packages_from_list(packages) %}
+{% macro install_packages_from_list(packages) -%}
 RUN apt-get update -yqq && \
     apt-get install -yqq --no-install-recommends {{ packages | join(' ') }} && \
     apt-get clean -yqq && \
     rm -rf /var/lib/apt/lists/*
-{% endmacro %}
+{%- endmacro %}
 
-{% macro install_packages_from_file(file) %}
+{% macro install_packages_from_file(file) -%}
 RUN apt-get update -yqq && \
     xargs -a {{ file }} apt-get install -yqq --no-install-recommends && \
     apt-get clean -yqq && \
     rm -rf /var/lib/apt/lists/*
-{% endmacro %}
+{%- endmacro %}
 
-{% macro setup() %}
+{% macro setup() -%}
 RUN apt-get update -yqq --fix-missing && \
     apt-get upgrade -yqq && \
     apt-get dist-upgrade -yqq && \
@@ -34,4 +34,4 @@ RUN apt-get update -yqq --fix-missing && \
     apt-get autoremove -yqq --purge && \
     apt-get clean -yqq && \
     rm -rf /var/lib/apt/lists/*
-{% endmacro %}
+{%- endmacro %}
