Fix missing mkdir for quarto and add get_version_directory function

--- a/posit-bakery/posit_bakery/config/templating/macros/quarto.j2
+++ b/posit-bakery/posit_bakery/config/templating/macros/quarto.j2
@@ -1,4 +1,9 @@
+{% macro get_version_directory(version) -%}
+/opt/quarto/{{ version }}
+{%- endmacro %}
+
 {% macro install(version, with_tinytex = False) -%}
-RUN curl -fsSL "https://github.com/quarto-dev/quarto-cli/releases/download/v{{ version }}/quarto-{{ version }}-linux-amd64.tar.gz" | tar xzf - -C "/opt/quarto/{{ version }}" --strip-components=1{% if with_tinytex %} && \
+RUN mkdir -p {{ get_version_directory(version) }} && \
+    curl -fsSL "https://github.com/quarto-dev/quarto-cli/releases/download/v{{ version }}/quarto-{{ version }}-linux-amd64.tar.gz" | tar xzf - -C "{{ get_version_directory(version) }}" --strip-components=1{% if with_tinytex %} && \
     /opt/quarto/{{ version }}/bin/quarto install tinytex{% endif %}
 {%- endmacro %}
