--- a/posit-bakery/posit_bakery/config/templating/macros/python.j2
+++ b/posit-bakery/posit_bakery/config/templating/macros/python.j2
@@ -18,8 +18,21 @@ COPY --from=python-builder /opt/python /opt/python
 {%- endmacro %}
 
 {% macro install_packages(versions, packages = None, requirements_file = None) -%}
-RUN {% for version in versions -%}
-    {{ get_version_directory(version) }}/bin/pip install --no-cache-dir --upgrade {% if packages %}{{ packages | join(' ') }} {% endif %}{% if requirements_file %}-r {{ requirements_file }}{% endif %}{% if not loop.last %} && \
-    {% endif %}
-    {%- endfor %}
+{%- if versions is string -%}
+{%- set versions = versions | split(",") -%}
+{%- endif -%}
+{%- if packages is string -%}
+{%- set packages = packages | split(",") -%}
+{%- endif -%}
+{% for version in versions -%}
+RUN {{ get_version_directory(version) }}/bin/pip install --no-cache-dir --upgrade \
+    {% for package in packages -%}
+        {{ package }} \
+    {% endfor -%}
+    {% if requirements_file -%}
+        -r {{ requirements_file }}
+    {%- endif %}
+{%- if not loop.last %}{# Handles whitespace for next RUN line if present #}
+{% endif %}
+{%- endfor %}
 {%- endmacro %}
