Improve R macro parameter handling

--- a/posit-bakery/posit_bakery/config/templating/macros/r.j2
+++ b/posit-bakery/posit_bakery/config/templating/macros/r.j2
@@ -1,12 +1,16 @@
 {% macro install(versions) -%}
-RUN {% for version in versions -%}
-    RUN_UNATTENDED=1 R_VERSION={{ version }} bash -c "$(curl -L https://rstd.io/r-install)"{% if not loop.last %} && \
-    {% endif %}
-    {%- endfor %}
+{%- if versions is string -%}
+{%- set versions = versions | split(",") -%}
+{%- endif -%}
+{% for version in versions -%}
+RUN RUN_UNATTENDED=1 R_VERSION={{ version | trim }} bash -c "$(curl -L https://rstd.io/r-install)"
+{%- if not loop.last %}{# Handles whitespace for next RUN line if present #}
+{% endif %}
+{%- endfor %}
 {%- endmacro %}
 
 {% macro get_version_directory(version) -%}
-/opt/R/{{ version }}
+/opt/R/{{ version | trim }}
 {%- endmacro %}
 
 {% macro get_p3m_cran_repo(_os) -%}
@@ -24,8 +28,15 @@ https://p3m.dev/cran/latest
 {%- endmacro %}
 
 {% macro install_packages(versions, packages = None, package_list_file = None, _os = None) -%}
-RUN {% for version in versions -%}
-    {{ get_version_directory(version) }}/bin/R --vanilla -e 'install.packages(c({% if packages %}{{ packages | map('quote') | join(', ') | safe }}{% endif %}{% if packages and package_list_file %}, {% endif %}{% if package_list_file %}readLines("{{ package_list_file }}"){% endif %}), repos="{{ get_p3m_cran_repo(_os) }}", clean = TRUE)'{% if not loop.last %} && \
-    {% endif %}
-    {%- endfor %}
+{%- if versions is string -%}
+{%- set versions = versions | split(",") -%}
+{%- endif -%}
+{%- if packages is string -%}
+{%- set packages = packages | split(",") -%}
+{%- endif -%}
+{% for version in versions -%}
+RUN {{ get_version_directory(version | trim) }}/bin/R --vanilla -e 'install.packages(c({% if packages %}{{ packages | map('trim') | map('quote') | join(', ') | safe }}{% endif %}{% if packages and package_list_file %}, {% endif %}{% if package_list_file %}readLines("{{ package_list_file | trim }}"){% endif %}), repos="{{ get_p3m_cran_repo(_os) | trim }}", clean = TRUE)'
+{%- if not loop.last %}{# Handles whitespace for next RUN line if present #}
+{% endif %}
+{%- endfor %}
 {%- endmacro %}
