Trim parameters that may be split to prevent whitespace issues

--- a/posit-bakery/posit_bakery/config/templating/macros/python.j2
+++ b/posit-bakery/posit_bakery/config/templating/macros/python.j2
@@ -27,10 +27,10 @@ COPY --from=python-builder /opt/python /opt/python
 {% for version in versions -%}
 RUN {{ get_version_directory(version) }}/bin/pip install --no-cache-dir --upgrade \
     {% for package in packages -%}
-        {{ package }} \
+        {{ package | trim }} \
     {% endfor -%}
     {% if requirements_file -%}
-        -r {{ requirements_file }}
+        -r {{ requirements_file | trim }}
     {%- endif %}
 {%- if not loop.last %}{# Handles whitespace for next RUN line if present #}
 {% endif %}
