--- a/posit-bakery/posit_bakery/config/templating/macros/quarto.j2
+++ b/posit-bakery/posit_bakery/config/templating/macros/quarto.j2
@@ -8,6 +8,6 @@
 
 {% macro install(version, with_tinytex = False) -%}
 RUN mkdir -p {{ get_version_directory(version) }} && \
-    curl -fsSL "https://github.com/quarto-dev/quarto-cli/releases/download/v{{ version }}/quarto-{{ version }}-linux-amd64.tar.gz" | tar xzf - -C "{{ get_version_directory(version) }}" --strip-components=1{% if with_tinytex %} && \
-    {{ install_tinytex_command(get_version_directory(version) + "/bin/quarto") }}{% endif %}
+    curl -fsSL "https://github.com/quarto-dev/quarto-cli/releases/download/v{{ version | trim }}/quarto-{{ version | trim }}-linux-amd64.tar.gz" | tar xzf - -C "{{ get_version_directory(version | trim) }}" --strip-components=1{% if with_tinytex %} && \
+    {{ install_tinytex_command(get_version_directory(version | trim) + "/bin/quarto") }}{% endif %}
 {%- endmacro %}
