--- a/posit-bakery/posit_bakery/config/templating/macros/apt.j2
+++ b/posit-bakery/posit_bakery/config/templating/macros/apt.j2
@@ -1,45 +1,121 @@
+{# Global options for apt-get commands #}
 {%- set global_options = "-yqq" -%}
 
+{# Commands for cleaning and removing the apt cache between layers #}
 {% macro clean_command() -%}
 apt-get clean {{ global_options }} && \
 rm -rf /var/lib/apt/lists/*
 {%- endmacro %}
 
-{% macro update_upgrade() -%}
-RUN apt-get update {{ global_options }} --fix-missing && \
-    apt-get upgrade {{ global_options }} && \
-    apt-get dist-upgrade {{ global_options }} && \
-    apt-get autoremove {{ global_options }} --purge && \
-    {{ clean_command() | indent(4) }}
+{# Commands for updating the apt cache, upgrading packages, running dist-upgrade, removing unneeded packages,
+and cleaning the apt cache.
+
+:param clean: Whether to clean the apt cache after upgrades. Defaults to True.
+#}
+{% macro update_upgrade(clean = True) -%}
+apt-get update {{ global_options }} --fix-missing && \
+apt-get upgrade {{ global_options }} && \
+apt-get dist-upgrade {{ global_options }} && \
+apt-get autoremove {{ global_options }} --purge {% if clean %}&& \
+{{ clean_command() }}
+{%- endif %}
 {%- endmacro %}
 
-{% macro install_packages_from_list(packages) -%}
+{# The update_upgrade() commands wrapped with a Docker RUN statement. #}
+{% macro run_update_upgrade() -%}
+RUN {{ update_upgrade() | indent(4) }}
+{%- endmacro %}
+
+{# Commands to install one or more packages from a list of packages.
+
+:param packages: A list of packages or a comma separated string of packages to install.
+:param clean: Whether to clean the apt cache after installation. Defaults to True.
+#}
+{% macro install_packages_from_list(packages, update = True, clean = True) -%}
 {%- if packages is string -%}
 {%- set packages = packages | split(",") -%}
 {%- endif -%}
-RUN apt-get update {{ global_options }} && \
-    apt-get install {{ global_options }} --no-install-recommends \
-    {%- for package in packages %}
-        {{ package | trim }}{% if loop.last %} &&{% endif %} \
-    {%- endfor %}
-    {{ clean_command() | indent(4) }}
+{% if update -%}
+apt-get update {{ global_options }} && \
+{%- endif %}
+apt-get install {{ global_options }} --no-install-recommends \
+{%- for package in packages %}
+    {{ package | trim }}{% if loop.last and clean %} &&{% endif %} {% if (not loop.last) or clean %}\{% endif %}
+{%- endfor %}
+{% if clean -%}
+{{ clean_command() }}
+{%- endif %}
 {%- endmacro %}
 
-{% macro install_packages_from_file(file) -%}
-RUN apt-get update {{ global_options }} && \
-    xargs -a {{ file }} apt-get install {{ global_options }} --no-install-recommends && \
-    {{ clean_command() | indent(4) }}
+{# Commands to install packages from a file containing a line separated list of packages.
+
+:param file: The file containing the line separated list of packages to install.
+:param clean: Whether to clean the apt cache after installation. Defaults to True.
+#}
+{% macro install_packages_from_file(file, update = True, clean = True) -%}
+{% if update -%}
+apt-get update {{ global_options }} && \
+{%- endif %}
+xargs -a {{ file }} apt-get install {{ global_options }} --no-install-recommends {% if clean %}&& \
+{{ clean_command() }}
+{%- endif %}
 {%- endmacro %}
 
-{% macro setup() -%}
-RUN apt-get update -yqq --fix-missing && \
-    apt-get upgrade -yqq && \
-    apt-get dist-upgrade -yqq && \
-    apt-get install -yqq --no-install-recommends \
-        curl \
-        ca-certificates \
-        gnupg \
-        tar && \
-    apt-get autoremove -yqq --purge && \
-    {{ clean_command() | indent(4) }}
+{# Commands to install one or more packages from a list of packages or a file containing a line separated list of
+packages.
+
+:param packages: A list of packages or a comma separated string of packages to install. Optional if files is provided.
+:param files: A list of files or a comma separated string of files containing line separated lists of packages to
+    install. Optional if packages is provided.
+:param clean: Whether to clean the apt cache after installation. Defaults to True.
+#}
+{% macro install(packages = None, files = None, clean = True) -%}
+{%- if not packages and not files -%}
+{%- raise "One of packages or files must be provided to apt.install()." -%}
+{%- endif -%}
+{%- if files is string -%}
+{%- set files = files | split(",") -%}
+{%- endif -%}
+apt-get update {{ global_options }} && \
+{%- if packages %}
+{{ install_packages_from_list(packages, False, False) }}{% if files or clean %} && \ {% endif %}
+{%- endif %}
+{%- if files %}
+{% for file in files -%}
+{{ install_packages_from_file(files, False, False) }}{% if (not loop.last) or clean %} && \ {% endif %}
+{%- endfor %}
+{%- endif %}
+{%- if clean %}
+{{ clean_command() }}
+{%- endif %}
+{%- endmacro %}
+
+{# Install one or more packages and/or files containing line separated lists of packages as separate RUN statements
+
+:param packages: A list of packages or a comma separated string of packages to install. Optional if files is provided.
+:param files: A list of files or a comma separated string of files containing line separated lists of packages to
+    install. Optional if packages is provided.
+#}
+{% macro run_install(packages = None, files = None) %}
+RUN {{ install(packages, files) | indent(4) }}
+{%- endmacro %}
+
+{# Commands for update_upgrade() and to install curl, ca-certificates, gnupg, and tar.
+
+:param clean: Whether to clean the apt cache after installation. Defaults to True.
+#}
+{% macro setup(clean = True) -%}
+{{ update_upgrade(False) }} && \
+apt-get install -yqq --no-install-recommends \
+    curl \
+    ca-certificates \
+    gnupg \
+    tar {% if clean %}&& \
+{{ clean_command() }}
+{%- endif %}
+{%- endmacro %}
+
+{# The setup() commands wrapped with a Docker RUN statement. #}
+{% macro run_setup() -%}
+RUN {{ setup() | indent(4) }}
 {%- endmacro %}
